--- a/app/src/main/res/layout/activity_book.xml
+++ b/app/src/main/res/layout/activity_book.xml
@@ -74,6 +74,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="The Mysterious"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/nameText"
                 app:layout_constraintStart_toStartOf="@+id/guideline4"
                 app:layout_constraintTop_toTopOf="@+id/nameText" />
