--- a/app/src/main/res/layout/list_item_book.xml
+++ b/app/src/main/res/layout/list_item_book.xml
@@ -80,6 +80,17 @@
                 android:layout_alignParentEnd="true"
                 android:src="@drawable/ic_up_arrow" />
 
+            <TextView
+                android:id="@+id/btnDelete"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/txtShortDesc"
+                android:layout_marginEnd="7dp"
+                android:layout_toStartOf="@id/btnUpArrow"
+                android:text="Delete"
+                android:textColor="@color/pink"
+                android:visibility="gone" />
+
 
         </RelativeLayout>
 
